Bug 384087 - Bookmarks not remembered when document is closed and re-opened
Summary: Bookmarks not remembered when document is closed and re-opened
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2017-08-27 21:02 UTC by Nate Graham
Modified: 2018-10-17 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2017-08-27 21:02:08 UTC
SUMMARY:
Bookmarks are not remembered when a document is closed


STEPS TO REPRODUCE:
1. Make sure Settings > Configure Kate > General > Keep meta-information past sessions is checked
2. Create a new .txt document in Kate or open an existing one
3. Set a bookmark anywhere
4. Close the document
5. Open it again in Kate


EXPECTED RESULTS:
The bookmark is saved.


ACTUAL RESULTS:
The bookmark is gone.
Comment 1 Darren Lissimore 2017-09-11 04:29:35 UTC
Confirmed - kate from up to date neon - 17.08.1 .
Comment 2 Christoph Cullmann 2018-10-17 16:57:29 UTC
Git commit 5781412002e8cbea3ffcbe73adf65d185fd8f59e by Christoph Cullmann, on behalf of Silas Lenz.
Committed on 17/10/2018 at 16:57.
Pushed by cullmann into branch 'master'.

Open document before using it's checksum to load metainfos

Summary:
loadMetaInfos tried to use the documents checksum before loading. The empty checksum results in it always failing to load metainfo and returning false, thus not using any of the stored metainfo.

Test Plan:
1. Enable "Keep meta-information past sessions".
2. Open file (with or without previous bookmarks).
3. Add or remove a bookmark.
4. Close and reopen the file (and/or close and reopen Kate).
5. Previous bookmarks should be reloaded.

Reviewers: #kate, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, ngraham, kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D16259

M  +4    -4    kate/katedocmanager.cpp

https://commits.kde.org/kate/5781412002e8cbea3ffcbe73adf65d185fd8f59e
Comment 3 Christoph Cullmann 2018-10-17 16:58:41 UTC
Git commit f0f301be4b29e1e1db429173d3c39f99d97d15c4 by Christoph Cullmann, on behalf of Silas Lenz.
Committed on 17/10/2018 at 16:58.
Pushed by cullmann into branch 'Applications/18.08'.

Open document before using it's checksum to load metainfos

Summary:
loadMetaInfos tried to use the documents checksum before loading. The empty checksum results in it always failing to load metainfo and returning false, thus not using any of the stored metainfo.

Test Plan:
1. Enable "Keep meta-information past sessions".
2. Open file (with or without previous bookmarks).
3. Add or remove a bookmark.
4. Close and reopen the file (and/or close and reopen Kate).
5. Previous bookmarks should be reloaded.

Reviewers: #kate, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, ngraham, kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D16259

M  +4    -4    kate/katedocmanager.cpp

https://commits.kde.org/kate/f0f301be4b29e1e1db429173d3c39f99d97d15c4