Open document before using it's checksum to load metainfos

Summary:
loadMetaInfos tried to use the documents checksum before loading. The empty checksum results in it always failing to load metainfo and returning false, thus not using any of the stored metainfo.

BUG: 384087

Test Plan:
1. Enable "Keep meta-information past sessions".
2. Open file (with or without previous bookmarks).
3. Add or remove a bookmark.
4. Close and reopen the file (and/or close and reopen Kate).
5. Previous bookmarks should be reloaded.

Reviewers: #kate, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, ngraham, kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D16259